--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/adapter-netlify": "^2.0.5",
 		"@sveltejs/kit": "^1.5.0",
 		"@types/google-spreadsheet": "^3.3.1",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
