--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
+		"@sentry/node": "^7.40.0",
+		"@sentry/svelte": "^7.40.0",
+		"@sentry/tracing": "^7.40.0",
 		"@sveltejs/adapter-netlify": "^2.0.5",
 		"@sveltejs/kit": "^1.5.0",
 		"@types/google-spreadsheet": "^3.3.1",
